fix: popup样式z-index调至5200

--- a/src/style/popper.less
+++ b/src/style/popper.less
@@ -9,7 +9,7 @@
 
   &-popup {
     position: absolute;
-    z-index: 1200;
+    z-index: 5200;
   }
 
   &-arrow {
